<resources>
    <string name="app_name">Dungeon Manager</string>
    <string name="action_settings">Settings</string>
    <string name="Title">Customize your character sheet</string>
    <string name="edit_message">Enter a message</string>
    <string name="name_message">Enter your name</string>
    <string name="type_message">Enter your type</string>
    <string name="class_message">Enter your class</string>
    <string name="strength_message">Strength number</string>
    <string name="button_send">Submit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="submit_dialog_title">Are you sure?</string>

    <string name="submit_fields_dialog_message">Your character attributes will be saved and\n
                                                you will only be able to edit them with\n
                                                the DM\'s permission.</string>
    <string name="title_activity_picker">Status Choice</string>
    <string name="DM_button">Dungeon Master</string>
    <string name="Player_button">Player</string>
    <string name="title_activity_dmactivity">DMactivity</string>
    <string name="title_activity_text_fragment">TextFragment</string>

    <string-array name="Char_Stats">
        <item>Name</item>
        <item>Class</item>
        <item>Race</item>
        <item>Level</item>
        <item>HP</item>
        <item>Dexterity</item>
        <item>Stength</item>
    </string-array>

    <string-array name="DM_Modify_Stats">
        <item>HP</item>
        <item>STR</item>
        <item>DEX</item>
        <item>CON</item>
        <item>INT</item>
        <item>WIS</item>
        <item>CHA</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_con">Enter CON</string>
    <string name="enter_dex">Enter DEX</string>
    <string name="enter_str">Enter STR</string>
    <string name="enter_int">Enter INT</string>
    <string name="enter_wis">Enter WIS</string>
    <string name="enter_cha">Enter CHA</string>
    <string name="enter_spd">Enter SPD</string>
    <string name="enter_ac">Enter AC</string>
    <string name="enter_hp">Enter HP</string>
    <string name="enter_level">Enter Level</string>
    <string name="random_stats">Random Stats</string>
    <string name="send_mod">Send Mod</string>
    <string name="enter_players_name">Enter Players Name</string>
    <string name="enter_effect">Enter Effect</string>

</resources>
