<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#cec1c2"
    android:weightSum="1">

    <TextView
        android:id="@+id/title"
        android:text="@string/title_activity_picker"
        android:textColor="#000008"
        android:layout_marginTop="70dp"
        android:layout_width="236dp"
        android:fontFamily="sans-serif-thin"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginLeft="148dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/DM_button"
        android:onClick="submitFields"
        android:id="@+id/buttonDM"
        android:singleLine="false"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/Player_button"
        android:onClick="submitFields"
        android:id="@+id/buttonPlayer"
        android:layout_below="@+id/buttonDM"
        android:layout_alignLeft="@+id/buttonDM"
        android:layout_alignRight="@+id/buttonDM"/>

</RelativeLayout>
