...
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button_send"
        android:onClick="submitFields"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />


    <EditText
        android:id="@+id/name_message"
        android:layout_width="fill_parent"
...
